--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="col-10 info-panel">
           <div class="row">
             <div class="col-lg">
-              <img src="https://github.com/oremoe/oremoe.github.io/img" alt="Employee" class="float-left">
+              <img src="img/employee.pbg" alt="Employee" class="float-left">
               <h4>seru</h4>
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
